# PressM

./: index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  stt.rs
src/lib/: parser.js  parser.test.js
