[package]
name = "pressm"
version = "0.1.0"
description = "PressM — Music Voice Controller"
authors = ["you"]
edition = "2021"

[lib]
name = "pressm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = { version = "0.11", features = ["metal"] }
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread"] }
